--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,35 @@
 ---
+import Heading from '../components/about/Heading.astro';
 import About from '../components/home/About.astro';
 import Cta from '../components/home/Cta.astro';
 import Expertise from '../components/home/Expertise.astro';
 import Hero from '../components/home/Hero.astro';
+import Projects from '../components/home/Projects.astro';
 import Services from '../components/home/Services.astro';
 import Testimonials from '../components/home/Testimonials.astro';
+import Footer from '../components/layout/Footer.astro';
+import Header from '../components/layout/Header.astro';
 import Layout from '../layouts/Layout.astro';
+
+const texts = [
+    {
+        page: 'Sambataro Arquitectos es un estudio de arquitectura con más de 20 años de experiencia en el mercado. Nos especializamos en proyectos de viviendas unifamiliares, multifamiliares, comerciales y de oficinas. Nuestro objetivo es crear espacios que se adapten a las necesidades de nuestros clientes y que reflejen su personalidad.',
+        title: 'Sambataro Arquitectos',
+        description:
+            'El castellano es una lengua romance del grupo ibérico. Es uno de los seis idiomas oficiales de la ONU y el segundo idioma más hablado del mundo.',
+    },
+];
 ---
 
-<Layout
-  description="Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and Startup websites."
-  title="Stone · Premium Astro template"
->
-  <Hero />
-  <Services />
+<Layout description={texts[0].page} title={texts[0].title}>
+    <Header />
+    <Hero title={texts[0].title} description={texts[0].description} />
+    <Heading title="Proyectos" subtitle="Selección de los más renombrados" />
+    <Projects />
+    <!-- <Services />
   <Expertise />
   <About />
   <Testimonials />
-  <Cta />
+  <Cta /> -->
+    <Footer />
 </Layout>
