--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,5 +1,5 @@
 ---
-import alfio from '../../img/alfio.webp';
+import orquesta from '../../img/orquesta.webp';
 import LanguagePicker from '../LanguagePicker.astro';
 import Nav from './Nav.astro';
 ---
@@ -23,7 +23,7 @@ import Nav from './Nav.astro';
         </div>
 
         <!-- Actions -->
-        <div class="-mr-2 flex items-center space-x-1">
+        <div class="-mr-2 flex w-fit items-center space-x-1">
             <!-- Toggle theme mode -->
             <button
                 type="button"
@@ -102,10 +102,10 @@ import Nav from './Nav.astro';
         x-show="open"
         x-collapse
         x-collapse.duration.500ms>
-        <div class="grid grid-cols-1 gap-16 pb-24 pt-6 lg:grid-cols-2 lg:pt-12">
+        <div class="relative grid grid-cols-1 gap-16 pb-24 pt-6 lg:grid-cols-2 lg:pt-12">
             <div
-                class="hidden items-center justify-center rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10 lg:flex">
-                <img src={alfio.src} alt="alfio picture" class="rounded-xl" />
+                class="hidden h-full w-auto items-center justify-center rounded-3xl bg-primary-500/10 object-cover dark:bg-primary-400/10 lg:flex">
+                <img src={orquesta.src} alt="orquesta picture" class="rounded-xl h-full object-cover grayscale" />
             </div>
 
             <!-- Navigation -->
