--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -11,7 +11,7 @@ const currentLocaleData = languages[lang];
 const otherLocales = Object.values(languages).filter((locale) => locale.code !== lang);
 ---
 
-<div class="z-20">
+<div class="z-20 w-fit">
     <div
         class="font-base bg-black/50 hover:bg-black/40 group rounded-full text-xl font-semibold transition-all">
         <button
@@ -23,7 +23,7 @@ const otherLocales = Object.values(languages).filter((locale) => locale.code !==
             {currentLocaleData.name}
         </button>
         <ul
-            class="group-hover:animate-fade-down group-hover:animate-duration-200 group-flex-col absolute hidden w-full pt-1 gap-1 group-hover:flex group-hover:flex-col">
+            class="group-hover:animate-fade-down group-hover:animate-duration-200 group-flex-col absolute hidden w-full gap-1 pt-1 group-hover:flex group-hover:flex-col">
             {
                 otherLocales.map((locale) => (
                     <a
