--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -60,7 +60,7 @@ const bottomLinks = [
     <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="flex flex-col justify-between gap-12 sm:gap-16 lg:flex-row">
             <div class="flex max-w-sm flex-col gap-6 sm:gap-8">
-                <p class="text-sm text-primary-950/70 text-pretty dark:text-primary-200/70">
+                <p class="text-sm text-primary-950/70 text-balance text-center sm:text-start dark:text-primary-200/70">
                     Sambataro Arquitectos es un estudio de arquitectura con más de 30 años de
                     experiencia en el diseño y construcción de teatros y auditorios en todo el
                     mundo.
