--- a/src/pages/projects/theaters/teatro-del-lago.astro
+++ b/src/pages/projects/theaters/teatro-del-lago.astro
@@ -25,6 +25,29 @@ import lago18 from '../../../img/projects/lago/lago18.webp';
 import lago19 from '../../../img/projects/lago/lago19.webp';
 import lago20 from '../../../img/projects/lago/lago20.webp';
 
+const datosTecnicos = [
+    { label: 'Tipología', value: 'Teatro' },
+    { label: 'Ubicación', value: 'Av. Philippi 1000, Frutillar, Chile' },
+    { label: 'Temática', value: 'Proyecto de obra nueva adaptada sobre bases existentes' },
+    {
+        label: 'Servicios',
+        value: 'Proyecto ejecutivo escenotécnico y de cámara acústica, Inspección de obra',
+    },
+    { label: 'Comitente', value: 'Inmobiliaria Frutillar S.A.' },
+    {
+        label: 'Proyecto de arquitectura general',
+        value: 'Arq. Gerardo Köster, Arq. Gustavo Greene, Arq. Bernd Haller, Arq. Cristián Valdés, Arq. Pablo Cordua y Arq. Andrés Alvear',
+    },
+    { label: 'Proyecto escenotécnico', value: 'Arq. Alfio Sambataro' },
+    { label: 'Localidades', value: '1200' },
+    { label: 'Superficie aproximada total', value: '10.000 m2' },
+    { label: 'Monto aproximado total', value: 'US$ 10.000.000' },
+    { label: 'Año', value: '2009-2010' },
+    { web: 'http://www.teatrodellago.cl/', href: 'http://www.teatrodellago.cl/' },
+];
+
+const asesores = ['-'];
+
 const images = [
     {
         largeURL: lago1.src,
@@ -161,6 +184,8 @@ const images = [
             description1="El Teatro del Lago de Frutillar, Chile, inaugurado en el año 2010 y diseñado inicialmente por los arquitectos Gerardo Köster, Gustavo Greene en una primera etapa, estaba concebido para realizar conciertos. Posteriormente, en una segunda etapa realizada por los arquitectos Bernd Haller, Cristián Valdés, Pablo Cordua y Andrés Alvear, se adaptó el diseño para funcionar como un teatro capaz de albergar la más variada clase de espectáculos. Se destaca por ser el teatro internacional más austral del mundo con una de las mejores acústicas del país. Su sala principal, “Espacio Tronador Sala Nestlé”, posee una capacidad para 1178 espectadores y un foso para 100 músicos. El teatro posee además un anfiteatro con un aforo de 270 personas y 4 salas multipropósito."
             description2="Dentro de este contexto, se realizó el proyecto ejecutivo completo de rigging y equipamiento escenotécnico general para la sala principal. Se instalaron varas motorizadas automatizadas bajo norma DIN 56950 con estándar de seguridad SIL 3, sistemas de suspensión manuales auxiliares y contrapesados, monorriel con motores puntuales, y parrillas y puentes de maniobras con piso modulado desmontable. El foso de orquesta posee dos plataformas automatizadas impulsadas por actuadores eléctricos helicoidales. También se realizó el diseño de la Cámara Acústica de concierto bajo normas de BBM Müller Alemania, junto con la Inspección de obra."
             img={lago}
+            datosTecnicos={datosTecnicos}
+            asesores={asesores}
         />
     </Layout>
 </Base>
