--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,5 +1,6 @@
 ---
 import orquesta from '../../img/orquesta.webp';
+import GoTop from '../GoTop.astro';
 import LanguagePicker from '../LanguagePicker.astro';
 import Nav from './Nav.astro';
 ---
@@ -8,14 +9,14 @@ import Nav from './Nav.astro';
     id="top"
     x-data="{ open: false }"
     class="transition"
-    :class="{ 'bg-primary-500/10 dark:bg-primary-400/10': open, 'bg-primary-100 dark:bg-primary-950': !(open) }">
+    :class="{ 'bg-primary-500/10 dark:bg-primary-400/10 z-20': open, 'bg-transparent dark:bg-transparent': !(open) }">
     <div
-        class="mx-auto flex max-w-2xl items-center justify-between px-4 py-4 sm:px-6 sm:py-2 lg:max-w-7xl lg:px-8">
+        class="mx-auto flex max-w-2xl items-center justify-between px-4 py-4 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8 lg:py-2">
         <!-- Brand logo -->
         <div class="flex">
             <a
                 href="/"
-                class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-primary-50/5 font-semibold uppercase tracking-tight text-primary-950 shadow ring-primary-950 transition hover:bg-primary-500/10 focus:outline-none focus-visible:ring-2 dark:text-primary-200 dark:hover:bg-primary-400/10 sm:text-2xl">
+                class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-primary-200/50 text-primary-950 shadow ring-primary-950 transition hover:bg-primary-200/75 focus:outline-none focus-visible:ring-2 dark:bg-primary-800/50  text-xl font-semibold dark:text-primary-200 dark:hover:bg-primary-800/75">
                 <span class="sr-only">logo sambataro</span>
                  SA
                 <!-- <img class="h-8 w-auto" width="65" height="40" alt="logo" /> -->
@@ -27,7 +28,7 @@ import Nav from './Nav.astro';
             <!-- Toggle theme mode -->
             <button
                 type="button"
-                class="inline-flex h-16 w-16 items-center justify-center rounded-full text-primary-950 shadow ring-primary-950 transition hover:bg-primary-500/10 focus:outline-none focus-visible:ring-2 dark:text-primary-200 dark:hover:bg-primary-400/10"
+                class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-primary-200/50 text-primary-950 shadow ring-primary-950 transition hover:bg-primary-200/75 focus:outline-none focus-visible:ring-2 dark:bg-primary-800/50 dark:text-primary-200 dark:hover:bg-primary-800/75"
                 x-data
                 @click="$store.theme.toggle()">
                 <span class="sr-only">Toggle theme mode</span>
@@ -60,7 +61,7 @@ import Nav from './Nav.astro';
             <!-- Toggle menu -->
             <button
                 type="button"
-                class="inline-flex h-16 w-16 items-center justify-center rounded-full text-primary-950 shadow ring-primary-950 transition hover:bg-primary-500/10 focus:outline-none focus-visible:ring-2 dark:text-primary-200 dark:hover:bg-primary-400/10"
+                class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-primary-200/50 text-primary-950 shadow ring-primary-950 transition hover:bg-primary-200/75 focus:outline-none focus-visible:ring-2 dark:bg-primary-800/50 dark:text-primary-200 dark:hover:bg-primary-800/75"
                 @click="open = !open"
                 @mousedown="if (open) $event.preventDefault()"
                 aria-controls="website-menu"
@@ -105,7 +106,11 @@ import Nav from './Nav.astro';
         <div class="relative grid grid-cols-1 gap-16 pb-24 pt-6 lg:grid-cols-2 lg:pt-12">
             <div
                 class="hidden h-full w-auto items-center justify-center rounded-3xl bg-primary-500/10 object-cover dark:bg-primary-400/10 lg:flex">
-                <img src={orquesta.src} alt="orquesta picture" class="rounded-xl h-full object-cover grayscale" />
+                <img
+                    src={orquesta.src}
+                    alt="orquesta picture"
+                    class="h-full rounded-xl object-cover grayscale -z-10"
+                />
             </div>
 
             <!-- Navigation -->
@@ -113,4 +118,5 @@ import Nav from './Nav.astro';
             <Nav />
         </div>
     </div>
+    <GoTop />
 </header>
