--- a/src/components/layout/Nav.astro
+++ b/src/components/layout/Nav.astro
@@ -13,21 +13,26 @@ const links = [
     },
     {
         ref: '02',
+        name: t('nav.projects'),
+        href: '/projects/all',
+    },
+    {
+        ref: '03',
         name: t('nav.about'),
         href: '/about',
     },
     {
-        ref: '03',
+        ref: '04',
         name: t('nav.twitter'),
         href: 'https://twitter.com/astrodotbuild',
     },
     {
-        ref: '04',
+        ref: '05',
         name: t('nav.pricing'),
         href: '/pricing',
     },
     {
-        ref: '05',
+        ref: '06',
         name: t('nav.contact'),
         href: '/contact',
     },
