--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -17,17 +17,17 @@ const { id, city, year, room, project, description, anchor, href, img } = Astro.
 ---
 
 <section class="py-16 sm:py-20">
-    <div class="mx-auto max-w-2xl px-4 sm:px-0 lg:max-w-7xl">
+    <div class="mx-auto max-w-2xl px-4 lg:max-w-7xl">
         <div
-            class="grid overflow-hidden rounded-xl bg-primary-200/50 shadow-md dark:bg-primary-400 lg:max-h-[700px] lg:grid-cols-2">
+            class="grid max-h-[550px] overflow-hidden rounded-xl bg-primary-200/50 shadow-md dark:bg-primary-400 lg:grid-cols-2">
             <img
                 transition:name={id}
-                class="mx-auto h-full max-h-[400px] w-full object-cover lg:aspect-[4/5] lg:max-h-[700px] lg:object-bottom"
+                class="mx-auto block h-full max-h-[375px] w-full object-cover lg:aspect-[4/5] lg:max-h-[550px] lg:object-bottom"
                 src={img.src}
                 alt="picture"
             />
             <div
-                class="flex h-full flex-col justify-center gap-4 p-6 dark:bg-primary-950/95 lg:max-h-[700px] lg:p-16">
+                class="flex max-h-[550px] flex-col justify-between space-y-4 p-6 dark:bg-primary-950/95 lg:p-8">
                 <!-- Mission description -->
 
                 <div class="tracking-light font-light text-primary-950/70 dark:text-primary-200/70">
@@ -37,9 +37,9 @@ const { id, city, year, room, project, description, anchor, href, img } = Astro.
                     <p class="text-base">✦ {room}</p>
                 </div>
                 <div class="">
-                    <dd class="text-4xl font-thin tracking-tight lg:text-6xl">{year}</dd>
+                    <dd class="text-4xl font-thin tracking-tight">{year}</dd>
                 </div>
-                <h2 class="text-balance text-3xl font-light tracking-tight lg:text-5xl">
+                <h2 class="text-balance text-3xl font-light tracking-tight lg:text-4xl">
                     {project}
                 </h2>
 
@@ -48,9 +48,7 @@ const { id, city, year, room, project, description, anchor, href, img } = Astro.
                         {description}
                     </p>
                 </div>
-                <div class="flex justify-center">
-                    <Anchor name={anchor} href={href} />
-                </div>
+                <Anchor name={anchor} href={href} />
             </div>
         </div>
     </div>
