--- a/src/pages/projects/all.astro
+++ b/src/pages/projects/all.astro
@@ -10,6 +10,8 @@ import colon from '../../img/projects/colon.webp';
 import argentino from '../../img/projects/argentino.webp';
 import kimmel from '../../img/projects/kimmel.webp';
 import solis from '../../img/projects/solis.webp';
+import eastman from '../../img/projects/eastman.webp';
+import santiago from '../../img/projects/santiago.webp';
 
 const OPTIONS = { loop: true };
 const SLIDE_COUNT = 5;
@@ -81,6 +83,30 @@ const projects = [
         img: solis,
         anchor: 'Ver más sobre este proyecto',
         href: '/projects/theaters/teatro-solis',
+    },
+    {
+        id: 'eastman',
+        city: 'Rochester, Estados Unidos',
+        year: '2004',
+        room: 'Acoustic Shell System, Kodak Hall',
+        project: 'Eastman Theater - Rochester',
+        description:
+            'El teatro Eastman, inaugurado en 1922 como centro de música, danza y artes visuales, con su sala principal Kodak Hall...',
+        img: eastman,
+        anchor: 'Ver más sobre este proyecto',
+        href: '/projects/theaters/eastman-theater',
+    },
+    {
+        id: 'santiago',
+        city: 'Santiago, Chile',
+        year: '2002-2014',
+        room: 'Sala Lírica',
+        project: 'Teatro Municipal de Santiago',
+        description:
+            'El Teatro Municipal de Santiago, inaugurado originalmente en el año 1857 y diseñado por el arquitecto François Brunet...',
+        img: santiago,
+        anchor: 'Ver más sobre este proyecto',
+        href: '/projects/theaters/teatro-santiago',
     },
 ];
 ---
