--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -12,7 +12,7 @@ const { title, description } = Astro.props;
 ---
 
 <Base>
-    <section class="relative -z-10 -translate-y-[5.5rem] pt-2">
+    <section class="relative -z-10 -translate-y-[5.5rem] lg:pt-2">
         <div class="mx-auto">
             <div class="flex flex-col gap-2">
                 <!-- <h1 class="tracking-thin text-[2.5rem] font-light lg:text-[4vw]">
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
                         autoplay
                         muted
                         playsinline
-                        class="h-full max-h-screen object-cover w-full">
+                        class="h-[85vh] lg:h-full lg:max-h-screen object-cover w-full">
                     </video>
                     <!-- <video
                         id="blur"
